--- a/deployment_tasks.yaml
+++ b/deployment_tasks.yaml
@@ -1,1 +1,23 @@
-[]
+#[]
+- id: zabbix
+  type: group
+  role: [zabbix]
+  tasks: [hiera, globals, tools, logging, netconfig, hosts, deploy_start]
+  required_for: [deploy_end]
+  requires: [deploy_start]
+  parameters:
+    strategy:
+      type: one_by_one
+
+# - id: zabbix-server
+#   type: puppet
+#   groups: [zabbix]
+#   required_for: [deploy_end]
+#   requires: [deploy_start, hosts]
+#   parameters:
+#     puppet_manifest: puppet/manifests/zabbix_server_config.pp
+#     puppet_modules: puppet/modules:/etc/puppet/modules
+#     timeout: 600
+
+#     puppet_manifest: puppet/manifests/zabbix_server_config.pp
+#     puppet_modules: puppet/modules:/etc/puppet/modules
