--- a/node_roles.yaml
+++ b/node_roles.yaml
@@ -1,6 +1,6 @@
-zabbix:
+dd-zabbix:
   name: "Zabbix server"
-  description: "Zabbix dedicated server"
+  description: "Standalone Zabbix server"
   conflicts:
     - controller
     - compute
